修改访问测试服务器的相关配置信息

--- a/ubo_111/ubo_111/ubo-access-terminal/src/main/resources/server-test.properties
+++ b/ubo_111/ubo_111/ubo-access-terminal/src/main/resources/server-test.properties
@@ -10,8 +10,10 @@ mq.uboQueue=InputQueue
 mq.loginQueue=login
 mq.T-PushQueue=OutQueue
 mq.monitorQueue=monitor.msg
-redis.host=127.0.0.1
-redis.port=6131
+#redis.host=127.0.0.1
+#redis.port=6131
+redis.host=112.74.51.194
+redis.port=6379
 redis.maxIdle=6
 redis.maxActive=10
 redis.maxWait=10
