20181107 添加08号报文处理报文

--- a/111wujing/src/111wujing/src/main/resources/db.properties
+++ b/111wujing/src/111wujing/src/main/resources/db.properties
@@ -5,6 +5,6 @@ jdbc.url=jdbc:mysql://14.116.149.237:3306/wujing?useUnicode=true&characterEncodi
 jdbc.username=tct
 #jdbc.password=ljy123
 jdbc.password=123456
-#jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
-jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+#jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
