--- a/111wujing/src/111wujing/src/main/resources/db.properties
+++ b/111wujing/src/111wujing/src/main/resources/db.properties
@@ -6,6 +6,8 @@ jdbc.url=jdbc:mysql://112.74.51.194:3306/wujing?useUnicode=true&characterEncodin
 jdbc.username=root
 #jdbc.password=ljy123
 jdbc.password=123456
-jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
-#jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+#company maven
+#jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+#home maven
+jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
