--- a/111wujing/src/111wujing/src/main/resources/db.properties
+++ b/111wujing/src/111wujing/src/main/resources/db.properties
@@ -7,7 +7,7 @@ jdbc.username=root
 #jdbc.password=ljy123
 jdbc.password=123456
 #company maven
-#jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+jdbc.driverLocation=E:\\repo\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
 #home maven
-jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
+#jdbc.driverLocation=E:\\Repository\\mysql\\mysql-connector-java\\5.1.8\\mysql-connector-java-5.1.8.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
