修改配置中的端口

--- a/ucTest/src/main/resources/application.properties
+++ b/ucTest/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #springboot ssl tomcat
-server.port=8443
+server.port=7000
+user.port=7001
 server.ssl.key-alias=tomcat
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=111111
