--- a/RabbitMqRouter/pom.xml
+++ b/RabbitMqRouter/pom.xml
@@ -78,6 +78,24 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- 跳过单元测试 -->
+			<plugin>  
+			    <groupId>org.apache.maven.plugin</groupId>  
+			    <artifactId>maven-compiler-plugin</artifactId>  
+			    <version>2.1</version>  
+			    <configuration>  
+			        <skip>true</skip>  
+			    </configuration>  
+			</plugin>  
+			<plugin>  
+			    <groupId>org.apache.maven.plugins</groupId>  
+			    <artifactId>maven-surefire-plugin</artifactId>  
+			    <version>2.5</version>  
+			    <configuration>  
+			        <skip>true</skip>  
+			    </configuration>  
+			</plugin> 	
+			<!-- 跳过单元测试 -->		
 		</plugins>
 	</build>
 
